# sigrok-test

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac
decoder/: pdtest  runtc.c
decoder/test/ac97/: alc655_snippet2.bin_frame_in  alc655_snippet2.bin_frame_out  alc655_snippet2.bin_slot_raw_in  alc655_snippet2.output  test.conf
decoder/test/ad5626/: ad5626_write_dac.output  test.conf
decoder/test/ad79x0/: ad7920_fast_read.output  test.conf
decoder/test/adf435x/: set-4000mhz.output  test.conf
decoder/test/adns5020/: init.output  test.conf
decoder/test/adxl345/: adxl345_axis.output  adxl345_registers.output  test.conf
decoder/test/am230x/: am2301_1mhz.output  am2302_1mhz.output  am2303_1mhz.output  am2320_1mhz.output  am2321_1mhz.output  am2322_1mhz.output  dht11_1mhz.output  test.conf
decoder/test/amulet_ascii/: bootup.output  menu_changes.output  test.conf
decoder/test/arm_etmv3/: test.conf
decoder/test/arm_itm/: test.conf
decoder/test/arm_tpiu/: test.conf
decoder/test/atsha204a/: atsha204a_snippet.output  test.conf
decoder/test/aud/: audgen-01.output  test.conf
decoder/test/avclan/: AUDIO_AMP-REPORT.output  CD-REPORT_PLAYBACK.output  CD-REPORT_TRACK_NAME-disc-title.output  CD-REPORT_TRACK_NAME-track-title.output  CD_CHANGER-REPORT_PLAYBACK.output  CQ-TS7471LC_bootup.output  TM0461-REPORT_TOC.output  TUNER-REPORT.output  errors-corrupted-packet.output  errors-parity-error-NAK.output  initial-bus-scan.output  lan-test-bus-scan.output  test.conf
decoder/test/avr_isp/: atmega328p_scan.output  atmega48.output  atmega88_erase_chip.output  atmega88_read_lfuse.output  atmega88_scan.output  test.conf
decoder/test/avr_pdi/: atxmega128a1-pdi-flash-verify-blinky.output  atxmega128a1-pdi-flash-write-blinky.output  atxmega128a1-pdi-identify.output  test.conf
decoder/test/caliper/: caliper_neg_mm.output  caliper_only_change.output  caliper_pos_in.output  caliper_pos_mm.output  test.conf
decoder/test/can/: can_fd_ext_brs_64.output  can_fd_ext_brs_64.python  can_fd_ext_brs_8.output  can_fd_ext_brs_8.python  can_fd_ext_without_brs_64.output  can_fd_ext_without_brs_8.output  can_fd_std_brs_64.output  can_fd_std_brs_64.python  can_fd_std_brs_8.output  can_fd_std_brs_8.python  can_fd_std_without_brs_64.output  can_fd_std_without_brs_8.output  mcp2515dm-bm-125kbits_bus_load_100percent.output  mcp2515dm-bm-125kbits_bus_load_25percent.output  mcp2515dm-bm-125kbits_bus_load_50percent.output  mcp2515dm-bm-125kbits_bus_load_75percent.output  mcp2515dm-bm-125kbits_extmsg_11223344_7bytes.output  mcp2515dm-bm-125kbits_msg_222_5bytes.output  nmea2000_fuel_flow_gps_snippet.output  test.conf
decoder/test/cc1101/: cc1101-burst-read.output  cc1101-burst-write.output  cc1101-command-strobe.output  cc1101-read-write.output  test.conf
decoder/test/cec/: bus_collision_example.output  test.conf  tv_sony_amp_denon_switch_off_seq.output  tv_sony_amp_denon_switch_on_seq.output  tv_sony_amp_yamaha_arc_handshake.output  tv_sony_amp_yamaha_switch_off_seq.output  tv_sony_amp_yamaha_switch_on_seq.output
decoder/test/cfp/: clause45_pluggable_transceiver.output  test.conf
decoder/test/cjtag/: cjtag_n305_sba_snippet.output  cjtag_n305_sba_snippet.python  cjtag_n307_sba_test_snippet.output  cjtag_n307_sba_test_snippet.python  test.conf
decoder/test/counter/: 9bit_spi_any.output  9bit_spi_falling.output  9bit_spi_rising.output  9bit_spi_rising_18bit_words.output  9bit_spi_rising_2bit_words.output  9bit_spi_rising_9bit_words.output  hd44780_text_falling_reset.output  nrf24l01_communication_tx_8bit_words_reset.output  test.conf
decoder/test/dali/: rako_rsrdali_query_ballast.output  test.conf
decoder/test/dcc/: decoder_120_121.output  decoder_133.output  decoder_140.output  decoder_2_light.output  decoder_310.output  decoder_45_light.output  test.conf
decoder/test/dcf77/: dcf77_120s.output  dcf77_20s.output  dcf77_480s.output  test.conf
decoder/test/dmx512/: 12mhz_all_255.output  12mhz_all_85.output  1mhz_all_255.output  1mhz_all_85.output  3mhz_all_255.output  3mhz_all_85.output  500khz_all_255.output  500khz_all_85.output  6mhz_all_255.output  6mhz_all_85.output  test.conf
decoder/test/ds1307/: rtc_ds1307_200khz.output  rtc_ds1307_500khz_sqw32khz_mode12h_pm.output  test.conf
decoder/test/ds2432/: ds2432.output  test.conf
decoder/test/ds243x/: ds2432.output  test.conf
decoder/test/ds28ea00/: ds28ea00.output  test.conf
decoder/test/dsi/: rako_wda-600_dsi.output  test.conf
decoder/test/edid/: acer_al711_on_dp_dm_hdmi_vga.output  samsung_le46b620r3p_fields.output  samsung_le46b620r3p_sections.output  samsung_syncmaster245b.output  test.conf
decoder/test/eeprom24xx/: amfpga-cpld-board-fx2-init.bin_binary  amfpga-cpld-board-fx2-init.output  glasgow-firmware-flash_snippet.bin_binary  glasgow-firmware-flash_snippet.output  lcsoft-mini-board-fx2-init.bin_binary  lcsoft-mini-board-fx2-init.output  sla24c02-s-3_powerup.bin_binary  sla24c02-s-3_powerup.output  st_m24c02_powerup_and_reset.bin_binary  st_m24c02_powerup_and_reset.output  test.conf  trekstor_ebr30_a_i2c_0x15.bin_binary  trekstor_ebr30_a_i2c_0x15.output  x24c02_dual.bin_binary  x24c02_dual.output
decoder/test/eeprom93cxx/: st_m93c66.output  test.conf
decoder/test/eeprom93xx/: st_m93c66.bin_address  st_m93c66.bin_data  st_m93c66.output  st_m93c66_ascii.output  test.conf
decoder/test/em4100/: em4100_010784f221_card.output  em4100_01092ade55_keyfob.output  em4100_0200f5ed8d.output  em4100_041815e864_glass.output  em4100_19004f03d7_card.output  em4100_19004f246f_card.output  em4100_29000c2c34_glass.output  em4100_3b0033aaf2_keyfob.output  em4100_3b00344ce7_keyfob.output  em4100_3b0035c693_keyfob.output  em4100_8400043916_keyfob.output  em4102_1f0044de9c_card.output  em4102_24003dab13_card.output  em4102_24003e8ad1_card.output  fk4100_29004e292a_card.output  fk4100_29004f72fb_card.output  test.conf
decoder/test/em4305/: em4305_write.output  t5557_write.output  test.conf
decoder/test/enc28j60/: enc28j60-init-and-ping.output  test.conf
decoder/test/flexray/: flexray_2s16_0d_one_cycle.output  (+5 more)
(+951 files in other folders)
